# CursoCPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
aula04/: variaveis_em_cpp.cpp  variaveis_em_cpp.h
aula05/: declaracoes_multiplas_em_cpp.cpp  declaracoes_multiplas_em_cpp.h
aula06/: variaveis_globais_e_locais_oper_mat.cpp  variaveis_globais_e_locais_oper_mat.h
aula07/: incremento_decremento_variaveis_operadores_pos_pre_fixados.cpp  incremento_decremento_variaveis_operadores_pos_pre_fixados.h
aula08/: invertendo_valores_variaveis.cpp  invertendo_valores_variaveis.h
aula09/: comando_decisão_if_else.cpp  comando_decisão_if_else.h
aula10/: operadores_and_or_not.cpp  operadores_and_or_not.h
aula11/: operador_ternario.cpp  operador_ternario.h
aula12/: comando_switch_case.cpp  comando_switch_case.h
