cmake_minimum_required(VERSION 4.1)
project(CFBCursosC__)

set(CMAKE_CXX_STANDARD 20)

add_executable(main_app main.cpp)

add_executable(aula_04 aula04/variaveis_em_cpp.cpp)
add_executable(aula_05 aula05/declaracoes_multiplas_em_cpp.cpp)
add_executable(aula_06 aula06/variaveis_globais_e_locais_oper_mat.cpp)
add_executable(aula_07 aula07/incremento_decremento_variaveis_operadores_pos_pre_fixados.cpp)
add_executable(aula_08 aula08/invertendo_valores_variaveis.cpp)
add_executable(aula_09 aula09/comando_decisão_if_else.cpp)
add_executable(aula_10 aula10/operadores_and_or_not.cpp)
